[gd_scene load_steps=83 format=3 uid="uid://ccb4m7k171ixw"]

[ext_resource type="Texture2D" uid="uid://cnesiy1g07jr0" path="res://assets/sprites/Fantasy Warrior/Attack1.png" id="1_bx6df"]
[ext_resource type="Script" path="res://scripts/boss.gd" id="1_oenmp"]
[ext_resource type="Texture2D" uid="uid://dmx3laohdi1a6" path="res://assets/sprites/Fantasy Warrior/Take hit.png" id="2_x4xqs"]
[ext_resource type="Texture2D" uid="uid://mgixo6qvtomh" path="res://assets/sprites/Fantasy Warrior/Death.png" id="3_ic8kn"]
[ext_resource type="Texture2D" uid="uid://ybv23ghdnn01" path="res://assets/sprites/Fantasy Warrior/Idle.png" id="4_d3cg3"]
[ext_resource type="Texture2D" uid="uid://bq5bpcygp8lms" path="res://assets/sprites/Fantasy Warrior/Attack2.png" id="4_x76sm"]
[ext_resource type="Texture2D" uid="uid://svl5vx4tmedc" path="res://assets/sprites/Fantasy Warrior/Attack3.png" id="5_i8uo2"]
[ext_resource type="AudioStream" uid="uid://cjm5al0hug3ux" path="res://assets/sounds/Lysanderoth - ProZD Wiki.wav" id="7_sh6fo"]
[ext_resource type="AudioStream" uid="uid://dacbq2dpioiq3" path="res://assets/sounds/when your party member dies permanently.mp3" id="8_ss4q2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_byjnf"]
atlas = ExtResource("4_d3cg3")
region = Rect2(0, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8uus"]
atlas = ExtResource("4_d3cg3")
region = Rect2(162, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_0h4w3"]
atlas = ExtResource("4_d3cg3")
region = Rect2(324, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_0q2sn"]
atlas = ExtResource("4_d3cg3")
region = Rect2(486, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_idlkp"]
atlas = ExtResource("1_bx6df")
region = Rect2(0, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_yguyw"]
atlas = ExtResource("1_bx6df")
region = Rect2(162, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_uikxx"]
atlas = ExtResource("1_bx6df")
region = Rect2(324, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_0lquo"]
atlas = ExtResource("1_bx6df")
region = Rect2(486, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqkcx"]
atlas = ExtResource("1_bx6df")
region = Rect2(648, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_sfuln"]
atlas = ExtResource("1_bx6df")
region = Rect2(810, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7ip1"]
atlas = ExtResource("1_bx6df")
region = Rect2(972, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqsb1"]
atlas = ExtResource("4_d3cg3")
region = Rect2(0, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5ppq"]
atlas = ExtResource("4_d3cg3")
region = Rect2(162, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_2e5id"]
atlas = ExtResource("4_d3cg3")
region = Rect2(324, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_bf6n2"]
atlas = ExtResource("4_d3cg3")
region = Rect2(648, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_65vlv"]
atlas = ExtResource("4_d3cg3")
region = Rect2(810, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4snk"]
atlas = ExtResource("4_d3cg3")
region = Rect2(486, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_ch4lo"]
atlas = ExtResource("4_x76sm")
region = Rect2(0, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_bovkn"]
atlas = ExtResource("4_x76sm")
region = Rect2(162, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_daa6p"]
atlas = ExtResource("4_x76sm")
region = Rect2(324, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_0iykb"]
atlas = ExtResource("4_x76sm")
region = Rect2(486, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_27mmx"]
atlas = ExtResource("4_x76sm")
region = Rect2(648, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1xlp"]
atlas = ExtResource("4_x76sm")
region = Rect2(810, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_you60"]
atlas = ExtResource("4_x76sm")
region = Rect2(972, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_ljopu"]
atlas = ExtResource("4_d3cg3")
region = Rect2(0, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dlt0"]
atlas = ExtResource("4_d3cg3")
region = Rect2(162, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_xncs1"]
atlas = ExtResource("4_d3cg3")
region = Rect2(324, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebyuh"]
atlas = ExtResource("4_d3cg3")
region = Rect2(486, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_1gplk"]
atlas = ExtResource("5_i8uo2")
region = Rect2(0, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_sd43v"]
atlas = ExtResource("5_i8uo2")
region = Rect2(162, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_4sbhw"]
atlas = ExtResource("5_i8uo2")
region = Rect2(324, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xoxa"]
atlas = ExtResource("5_i8uo2")
region = Rect2(486, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4lfy"]
atlas = ExtResource("5_i8uo2")
region = Rect2(648, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjh1u"]
atlas = ExtResource("5_i8uo2")
region = Rect2(810, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_snph6"]
atlas = ExtResource("5_i8uo2")
region = Rect2(972, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_6jciy"]
atlas = ExtResource("5_i8uo2")
region = Rect2(1134, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6yjy"]
atlas = ExtResource("5_i8uo2")
region = Rect2(486, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ccxa"]
atlas = ExtResource("5_i8uo2")
region = Rect2(648, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4a5p"]
atlas = ExtResource("5_i8uo2")
region = Rect2(810, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtxpq"]
atlas = ExtResource("5_i8uo2")
region = Rect2(972, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_jpapb"]
atlas = ExtResource("5_i8uo2")
region = Rect2(1134, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6byc"]
atlas = ExtResource("2_x4xqs")
region = Rect2(162, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0tmd"]
atlas = ExtResource("2_x4xqs")
region = Rect2(324, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_k6lid"]
atlas = ExtResource("2_x4xqs")
region = Rect2(0, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_d5iwl"]
atlas = ExtResource("3_ic8kn")
region = Rect2(0, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_14yy6"]
atlas = ExtResource("3_ic8kn")
region = Rect2(162, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypx0c"]
atlas = ExtResource("3_ic8kn")
region = Rect2(324, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_b026o"]
atlas = ExtResource("3_ic8kn")
region = Rect2(486, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_mkee3"]
atlas = ExtResource("3_ic8kn")
region = Rect2(648, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6cys"]
atlas = ExtResource("3_ic8kn")
region = Rect2(810, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_87w16"]
atlas = ExtResource("3_ic8kn")
region = Rect2(972, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_235h1"]
atlas = ExtResource("4_d3cg3")
region = Rect2(0, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_6e0lw"]
atlas = ExtResource("4_d3cg3")
region = Rect2(162, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dh7n"]
atlas = ExtResource("4_d3cg3")
region = Rect2(324, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjhji"]
atlas = ExtResource("4_d3cg3")
region = Rect2(486, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_nketp"]
atlas = ExtResource("4_d3cg3")
region = Rect2(972, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_bkhck"]
atlas = ExtResource("4_d3cg3")
region = Rect2(1134, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_gy4s6"]
atlas = ExtResource("4_d3cg3")
region = Rect2(1296, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0fte"]
atlas = ExtResource("4_d3cg3")
region = Rect2(1458, 0, 162, 162)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_gbiwr"]
load_path = "res://.godot/imported/Run.png-6f8b0057c33ce48662fb4131eb1f46ef.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_bhl53"]
atlas = SubResource("CompressedTexture2D_gbiwr")
region = Rect2(0, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_tfi21"]
atlas = SubResource("CompressedTexture2D_gbiwr")
region = Rect2(162, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_hlix0"]
atlas = SubResource("CompressedTexture2D_gbiwr")
region = Rect2(324, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1phm"]
atlas = SubResource("CompressedTexture2D_gbiwr")
region = Rect2(486, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_8lgd0"]
atlas = SubResource("CompressedTexture2D_gbiwr")
region = Rect2(648, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd8i4"]
atlas = SubResource("CompressedTexture2D_gbiwr")
region = Rect2(810, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5w8n"]
atlas = SubResource("CompressedTexture2D_gbiwr")
region = Rect2(972, 0, 162, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_dh3ee"]
atlas = SubResource("CompressedTexture2D_gbiwr")
region = Rect2(1134, 0, 162, 162)

[sub_resource type="SpriteFrames" id="SpriteFrames_sl7cl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_byjnf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8uus")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0h4w3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0q2sn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_idlkp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yguyw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uikxx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0lquo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqkcx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sfuln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7ip1")
}],
"loop": false,
"name": &"attack_1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqsb1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5ppq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2e5id")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bf6n2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65vlv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4snk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ch4lo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bovkn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_daa6p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0iykb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27mmx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1xlp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_you60")
}],
"loop": false,
"name": &"attack_2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ljopu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dlt0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xncs1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebyuh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1gplk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sd43v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4sbhw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xoxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4lfy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjh1u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_snph6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6jciy")
}],
"loop": false,
"name": &"attack_3",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6yjy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ccxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4a5p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtxpq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpapb")
}],
"loop": false,
"name": &"attack_4",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6byc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v0tmd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k6lid")
}],
"loop": false,
"name": &"damaged",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d5iwl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_14yy6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypx0c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b026o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mkee3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6cys")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_87w16")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_235h1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6e0lw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dh7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjhji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bf6n2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65vlv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nketp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkhck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gy4s6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0fte")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhl53")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tfi21")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hlix0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1phm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8lgd0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd8i4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5w8n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dh3ee")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1nok3"]
size = Vector2(29, 47)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jb4be"]
size = Vector2(38, 47)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7aj0n"]
size = Vector2(104, 52)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_013re"]
size = Vector2(351, 121)

[node name="Boss" type="CharacterBody2D" groups=["Boss"]]
collision_mask = 3
script = ExtResource("1_oenmp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_sl7cl")
animation = &"attack_2"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, -3.5)
shape = SubResource("RectangleShape2D_1nok3")

[node name="Attack Hitbox_1" type="Area2D" parent="."]
position = Vector2(31, -4)
collision_mask = 2
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack Hitbox_1"]
position = Vector2(1, 0.5)
shape = SubResource("RectangleShape2D_jb4be")

[node name="Attack Hitbox_2" type="Area2D" parent="."]
position = Vector2(-36, -4)
collision_mask = 2
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack Hitbox_2"]
position = Vector2(1, 0.5)
shape = SubResource("RectangleShape2D_jb4be")

[node name="Attack Hitbox_3" type="Area2D" parent="."]
position = Vector2(0, -49)
collision_mask = 2
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack Hitbox_3"]
position = Vector2(-1, -4)
shape = SubResource("RectangleShape2D_7aj0n")

[node name="Agro Zone" type="Area2D" parent="."]
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Agro Zone"]
position = Vector2(-6.5, -29.5)
shape = SubResource("RectangleShape2D_013re")

[node name="AttackCooldownTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="Dialogue" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_sh6fo")
volume_db = -5.0
bus = &"SFX"

[node name="Dialogue2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_ss4q2")
volume_db = -5.0
bus = &"SFX"

[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="body_entered" from="Attack Hitbox_1" to="." method="_on_attack_hitbox_1_body_entered"]
[connection signal="body_entered" from="Attack Hitbox_2" to="." method="_on_attack_hitbox_2_body_entered"]
[connection signal="body_entered" from="Attack Hitbox_3" to="." method="_on_attack_hitbox_3_body_entered"]
[connection signal="body_entered" from="Agro Zone" to="." method="_on_agro_zone_body_entered"]
[connection signal="body_exited" from="Agro Zone" to="." method="_on_agro_zone_body_exited"]
[connection signal="timeout" from="AttackCooldownTimer" to="." method="_on_timer_timeout"]
